Step 8 is done
