# internal/web/users/api.gen.go
@@ -1,7 +1,7 @@
-// Package tasks provides primitives to interact with the openapi HTTP API.
+// Package users provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.16.3 DO NOT EDIT.
-package tasks
+package users
 
 import (
 	"context"
@@ -14,33 +14,33 @@ import (
 	strictecho "github.com/oapi-codegen/runtime/strictmiddleware/echo"
 )
 
-// Task defines model for Task.
-type Task struct {
-	Id     *uint   `json:"id,omitempty"`
-	IsDone *bool   `json:"is_done,omitempty"`
-	Task   *string `json:"task,omitempty"`
+// User defines model for User.
+type User struct {
+	Id       *uint   `json:"id,omitempty"`
+	Email    *string `json:"email,omitempty"`
+	Password *string `json:"password,omitempty"`
 }
 
-// PostTasksJSONRequestBody defines body for PostTasks for application/json ContentType.
-type PostTasksJSONRequestBody = Task
+// PostUsersJSONRequestBody defines body for PostUsers for application/json ContentType.
+type PostUsersJSONRequestBody = User
 
-// PutTasksIdJSONRequestBody defines body for PutTasksId for application/json ContentType.
-type PutTasksIdJSONRequestBody = Task
+// PutUsersIdJSONRequestBody defines body for PutUsersId for application/json ContentType.
+type PutUsersIdJSONRequestBody = User
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
-	// Get all tasks
-	// (GET /tasks)
-	GetTasks(ctx echo.Context) error
-	// Create a new task
-	// (POST /tasks)
-	PostTasks(ctx echo.Context) error
-	// Delete a task
-	// (DELETE /tasks/{id})
-	DeleteTasksId(ctx echo.Context, id int64) error
-	// Update a task
-	// (PUT /tasks/{id})
-	PutTasksId(ctx echo.Context, id int64) error
+	// Get all users
+	// (GET /users)
+	GetUsers(ctx echo.Context) error
+	// Create a new user
+	// (POST /users)
+	PostUsers(ctx echo.Context) error
+	// Delete a user
+	// (DELETE /users/{id})
+	DeleteUsersId(ctx echo.Context, id int64) error
+	// Update a user
+	// (PUT /users/{id})
+	PutUsersId(ctx echo.Context, id int64) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -48,26 +48,26 @@ type ServerInterfaceWrapper struct {
 	Handler ServerInterface
 }
 
-// GetTasks converts echo context to params.
-func (w *ServerInterfaceWrapper) GetTasks(ctx echo.Context) error {
+// GetUsers converts echo context to params.
+func (w *ServerInterfaceWrapper) GetUsers(ctx echo.Context) error {
 	var err error
 
 	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.GetTasks(ctx)
+	err = w.Handler.GetUsers(ctx)
 	return err
 }
 
-// PostTasks converts echo context to params.
-func (w *ServerInterfaceWrapper) PostTasks(ctx echo.Context) error {
+// PostUsers converts echo context to params.
+func (w *ServerInterfaceWrapper) PostUsers(ctx echo.Context) error {
 	var err error
 
 	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.PostTasks(ctx)
+	err = w.Handler.PostUsers(ctx)
 	return err
 }
 
-// DeleteTasksId converts echo context to params.
-func (w *ServerInterfaceWrapper) DeleteTasksId(ctx echo.Context) error {
+// DeleteUsersId converts echo context to params.
+func (w *ServerInterfaceWrapper) DeleteUsersId(ctx echo.Context) error {
 	var err error
 	// ------------- Path parameter "id" -------------
 	var id int64
@@ -78,12 +78,12 @@ func (w *ServerInterfaceWrapper) DeleteTasksId(ctx echo.Context) error {
 	}
 
 	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.DeleteTasksId(ctx, id)
+	err = w.Handler.DeleteUsersId(ctx, id)
 	return err
 }
 
-// PutTasksId converts echo context to params.
-func (w *ServerInterfaceWrapper) PutTasksId(ctx echo.Context) error {
+// PutUsersId converts echo context to params.
+func (w *ServerInterfaceWrapper) PutUsersId(ctx echo.Context) error {
 	var err error
 	// ------------- Path parameter "id" -------------
 	var id int64
@@ -94,7 +94,7 @@ func (w *ServerInterfaceWrapper) PutTasksId(ctx echo.Context) error {
 	}
 
 	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.PutTasksId(ctx, id)
+	err = w.Handler.PutUsersId(ctx, id)
 	return err
 }
 
@@ -126,74 +126,74 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 		Handler: si,
 	}
 
-	router.GET(baseURL+"/tasks", wrapper.GetTasks)
-	router.POST(baseURL+"/tasks", wrapper.PostTasks)
-	router.DELETE(baseURL+"/tasks/:id", wrapper.DeleteTasksId)
-	router.PUT(baseURL+"/tasks/:id", wrapper.PutTasksId)
+	router.GET(baseURL+"/users", wrapper.GetUsers)
+	router.POST(baseURL+"/users", wrapper.PostUsers)
+	router.DELETE(baseURL+"/users/:id", wrapper.DeleteUsersId)
+	router.PUT(baseURL+"/users/:id", wrapper.PutUsersId)
 
 }
 
-type GetTasksRequestObject struct {
+type GetUsersRequestObject struct {
 }
 
-type GetTasksResponseObject interface {
-	VisitGetTasksResponse(w http.ResponseWriter) error
+type GetUsersResponseObject interface {
+	VisitGetUsersResponse(w http.ResponseWriter) error
 }
 
-type GetTasks200JSONResponse []Task
+type GetUsers200JSONResponse []User
 
-func (response GetTasks200JSONResponse) VisitGetTasksResponse(w http.ResponseWriter) error {
+func (response GetUsers200JSONResponse) VisitGetUsersResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(200)
 
 	return json.NewEncoder(w).Encode(response)
 }
 
-type PostTasksRequestObject struct {
-	Body *PostTasksJSONRequestBody
+type PostUsersRequestObject struct {
+	Body *PostUsersJSONRequestBody
 }
 
-type PostTasksResponseObject interface {
-	VisitPostTasksResponse(w http.ResponseWriter) error
+type PostUsersResponseObject interface {
+	VisitPostUsersResponse(w http.ResponseWriter) error
 }
 
-type PostTasks201JSONResponse Task
+type PostUsers201JSONResponse User
 
-func (response PostTasks201JSONResponse) VisitPostTasksResponse(w http.ResponseWriter) error {
+func (response PostUsers201JSONResponse) VisitPostUsersResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(201)
 
 	return json.NewEncoder(w).Encode(response)
 }
 
-type DeleteTasksIdRequestObject struct {
+type DeleteUsersIdRequestObject struct {
 	Id int64 `json:"id"`
 }
 
-type DeleteTasksIdResponseObject interface {
-	VisitDeleteTasksIdResponse(w http.ResponseWriter) error
+type DeleteUsersIdResponseObject interface {
+	VisitDeleteUsersIdResponse(w http.ResponseWriter) error
 }
 
-type DeleteTasksId204Response struct {
+type DeleteUsersId204Response struct {
 }
 
-func (response DeleteTasksId204Response) VisitDeleteTasksIdResponse(w http.ResponseWriter) error {
+func (response DeleteUsersId204Response) VisitDeleteUsersIdResponse(w http.ResponseWriter) error {
 	w.WriteHeader(204)
 	return nil
 }
 
-type PutTasksIdRequestObject struct {
+type PutUsersIdRequestObject struct {
 	Id   int64 `json:"id"`
-	Body *PutTasksIdJSONRequestBody
+	Body *PutUsersIdJSONRequestBody
 }
 
-type PutTasksIdResponseObject interface {
-	VisitPutTasksIdResponse(w http.ResponseWriter) error
+type PutUsersIdResponseObject interface {
+	VisitPutUsersIdResponse(w http.ResponseWriter) error
 }
 
-type PutTasksId200JSONResponse Task
+type PutUsersId200JSONResponse User
 
-func (response PutTasksId200JSONResponse) VisitPutTasksIdResponse(w http.ResponseWriter) error {
+func (response PutUsersId200JSONResponse) VisitPutUsersIdResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(200)
 
@@ -202,18 +202,18 @@ func (response PutTasksId200JSONResponse) VisitPutTasksIdResponse(w http.Respons
 
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
-	// Get all tasks
-	// (GET /tasks)
-	GetTasks(ctx context.Context, request GetTasksRequestObject) (GetTasksResponseObject, error)
-	// Create a new task
-	// (POST /tasks)
-	PostTasks(ctx context.Context, request PostTasksRequestObject) (PostTasksResponseObject, error)
-	// Delete a task
-	// (DELETE /tasks/{id})
-	DeleteTasksId(ctx context.Context, request DeleteTasksIdRequestObject) (DeleteTasksIdResponseObject, error)
-	// Update a task
-	// (PUT /tasks/{id})
-	PutTasksId(ctx context.Context, request PutTasksIdRequestObject) (PutTasksIdResponseObject, error)
+	// Get all users
+	// (GET /users)
+	GetUsers(ctx context.Context, request GetUsersRequestObject) (GetUsersResponseObject, error)
+	// Create a new user
+	// (POST /users)
+	PostUsers(ctx context.Context, request PostUsersRequestObject) (PostUsersResponseObject, error)
+	// Delete a user
+	// (DELETE /users/{id})
+	DeleteUsersId(ctx context.Context, request DeleteUsersIdRequestObject) (DeleteUsersIdResponseObject, error)
+	// Update a user
+	// (PUT /users/{id})
+	PutUsersId(ctx context.Context, request PutUsersIdRequestObject) (PutUsersIdResponseObject, error)
 }
 
 type StrictHandlerFunc = strictecho.StrictEchoHandlerFunc
@@ -228,108 +228,108 @@ type strictHandler struct {
 	middlewares []StrictMiddlewareFunc
 }
 
-// GetTasks operation middleware
-func (sh *strictHandler) GetTasks(ctx echo.Context) error {
-	var request GetTasksRequestObject
+// GetUsers operation middleware
+func (sh *strictHandler) GetUsers(ctx echo.Context) error {
+	var request GetUsersRequestObject
 
 	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
-		return sh.ssi.GetTasks(ctx.Request().Context(), request.(GetTasksRequestObject))
+		return sh.ssi.GetUsers(ctx.Request().Context(), request.(GetUsersRequestObject))
 	}
 	for _, middleware := range sh.middlewares {
-		handler = middleware(handler, "GetTasks")
+		handler = middleware(handler, "GetUsers")
 	}
 
 	response, err := handler(ctx, request)
 
 	if err != nil {
 		return err
-	} else if validResponse, ok := response.(GetTasksResponseObject); ok {
-		return validResponse.VisitGetTasksResponse(ctx.Response())
+	} else if validResponse, ok := response.(GetUsersResponseObject); ok {
+		return validResponse.VisitGetUsersResponse(ctx.Response())
 	} else if response != nil {
 		return fmt.Errorf("unexpected response type: %T", response)
 	}
 	return nil
 }
 
-// PostTasks operation middleware
-func (sh *strictHandler) PostTasks(ctx echo.Context) error {
-	var request PostTasksRequestObject
+// PostUsers operation middleware
+func (sh *strictHandler) PostUsers(ctx echo.Context) error {
+	var request PostUsersRequestObject
 
-	var body PostTasksJSONRequestBody
+	var body PostUsersJSONRequestBody
 	if err := ctx.Bind(&body); err != nil {
 		return err
 	}
 	request.Body = &body
 
 	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
-		return sh.ssi.PostTasks(ctx.Request().Context(), request.(PostTasksRequestObject))
+		return sh.ssi.PostUsers(ctx.Request().Context(), request.(PostUsersRequestObject))
 	}
 	for _, middleware := range sh.middlewares {
-		handler = middleware(handler, "PostTasks")
+		handler = middleware(handler, "PostUsers")
 	}
 
 	response, err := handler(ctx, request)
 
 	if err != nil {
 		return err
-	} else if validResponse, ok := response.(PostTasksResponseObject); ok {
-		return validResponse.VisitPostTasksResponse(ctx.Response())
+	} else if validResponse, ok := response.(PostUsersResponseObject); ok {
+		return validResponse.VisitPostUsersResponse(ctx.Response())
 	} else if response != nil {
 		return fmt.Errorf("unexpected response type: %T", response)
 	}
 	return nil
 }
 
-// DeleteTasksId operation middleware
-func (sh *strictHandler) DeleteTasksId(ctx echo.Context, id int64) error {
-	var request DeleteTasksIdRequestObject
+// DeleteUsersId operation middleware
+func (sh *strictHandler) DeleteUsersId(ctx echo.Context, id int64) error {
+	var request DeleteUsersIdRequestObject
 
 	request.Id = id
 
 	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
-		return sh.ssi.DeleteTasksId(ctx.Request().Context(), request.(DeleteTasksIdRequestObject))
+		return sh.ssi.DeleteUsersId(ctx.Request().Context(), request.(DeleteUsersIdRequestObject))
 	}
 	for _, middleware := range sh.middlewares {
-		handler = middleware(handler, "DeleteTasksId")
+		handler = middleware(handler, "DeleteUsersId")
 	}
 
 	response, err := handler(ctx, request)
 
 	if err != nil {
 		return err
-	} else if validResponse, ok := response.(DeleteTasksIdResponseObject); ok {
-		return validResponse.VisitDeleteTasksIdResponse(ctx.Response())
+	} else if validResponse, ok := response.(DeleteUsersIdResponseObject); ok {
+		return validResponse.VisitDeleteUsersIdResponse(ctx.Response())
 	} else if response != nil {
 		return fmt.Errorf("unexpected response type: %T", response)
 	}
 	return nil
 }
 
-// PutTasksId operation middleware
-func (sh *strictHandler) PutTasksId(ctx echo.Context, id int64) error {
-	var request PutTasksIdRequestObject
+// PutUsersId operation middleware
+func (sh *strictHandler) PutUsersId(ctx echo.Context, id int64) error {
+	var request PutUsersIdRequestObject
 
 	request.Id = id
 
-	var body PutTasksIdJSONRequestBody
+	var body PutUsersIdJSONRequestBody
 	if err := ctx.Bind(&body); err != nil {
 		return err
 	}
 	request.Body = &body
 
 	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
-		return sh.ssi.PutTasksId(ctx.Request().Context(), request.(PutTasksIdRequestObject))
+		return sh.ssi.PutUsersId(ctx.Request().Context(), request.(PutUsersIdRequestObject))
 	}
 	for _, middleware := range sh.middlewares {
-		handler = middleware(handler, "PutTasksId")
+		handler = middleware(handler, "PutUsersId")
 	}
 
 	response, err := handler(ctx, request)
 
 	if err != nil {
 		return err
-	} else if validResponse, ok := response.(PutTasksIdResponseObject); ok {
-		return validResponse.VisitPutTasksIdResponse(ctx.Response())
+	} else if validResponse, ok := response.(PutUsersIdResponseObject); ok {
+		return validResponse.VisitPutUsersIdResponse(ctx.Response())
 	} else if response != nil {
 		return fmt.Errorf("unexpected response type: %T", response)
 	}
